--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
                 </tr>
             </table>
         </section>
+
+        <!--Parent resource section-->
+        <section id ="Resources">
+            <h2>Parent Resources</h2>
+            <p> check here for announcements and any further information for parents! </p>
+            <ul>
+                <li><a href="#">Monthly Newsletter</a></li>
+                <li><a href="#">Upcoming Events</a></li>
+                <li><a href="#">Contact Information</a></li>
+            </ul>
+        </section>
           <!-- Teacher Information Section -->
         <section id= "teacher">
             <h2>Meet and get to know the teacher</h2>
