--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Sunshine Kindergarten</title>
 </head>
 <body>
-    <!-- Header Section -->
+  
     <header>
         <h1>Welcome to Sunshine Kindergarten!</h1>
         <nav>
@@ -20,3 +20,10 @@
             </ul>
         </nav>
     </header>
+
+    <main> 
+        <section_id= "welcome" >
+            <h2> Welcome to the classroom  </h2>
+            <p> We provide education in an enjoyable way here at sunshine kindergarden </p>
+
+    </main>
