--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Sunshine Kindergarten</title>
 </head>
 <body>
-  
+  <!--Header and nav-->
     <header>
         <h1>Welcome to Sunshine Kindergarten!</h1>
         <nav>
@@ -20,10 +20,30 @@
             </ul>
         </nav>
     </header>
-
+<!--Main section -->
     <main> 
-        <section_id= "welcome" >
-            <h2> Welcome to the classroom  </h2>
+        <!--welcome section-->
+        <section id= "welcome" >
+            <h2> Welcome to the classroom!  </h2>
             <p> We provide education in an enjoyable way here at sunshine kindergarden </p>
+        </section> 
 
+        <!--weekly schedule section-->
+        <section id= "schedule ">
+            <h2>Weekly schedule</h2> 
+            <table>
+                <tr>
+                    <th> Day </th>
+                    <th> Activity </th>
+                </tr>
+                <tr>
+                    <td> Monday </td>
+                    <td> Arts & crafts </td>
+                    
+                    
+
+
+                </tr>
+            </table>
+        </section>
     </main>
