Update index.html, teacher info and footer

--- a/index.html
+++ b/index.html
@@ -54,10 +54,20 @@
                 </tr>
                 <tr>
                 <td> Friday </td>
-                <td> Outdoor activities </td>
-                
-                    
+                <td> Outdoor activities </td>    
                 </tr>
             </table>
         </section>
+          <!-- Teacher Information Section -->
+        <section id= "teacher">
+            <h2>Meet and get to know the teacher</h2>
+            <p> Hello, I'm Mrs.Caroline, and I have been a teacher for 15 years. I have 4 kids of my own and being a kindergarten teacher makes me really happy. I love seeing the children grow and develop. </p>
+             </section>
     </main>
+
+    <!-- Footer -->
+    <footer>
+        <p> © 2024 Sunshine Kindergarten | All Rights Reserved </p>
+    </footer>
+    </body>
+    </html>
