--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
             </table>
         </section>
 
+        <!-- Gallery -->
+        <section id="gallery"> 
+            <h2> Kids activities </h2>
+            <div class="gallery"> 
+                <img src="gallery/Arts and Crafts.jpg" alt="Arts and Crafts">
+                <img src="gallery/outdoor activities.jpg" alt="Outdoor activities">
+                <img src="gallery/story time.jpg" alt="Story time ">
+
+
+            </div>
+        </section>
         <!--Parent resource section-->
         <section id ="Resources">
             <h2>Parent Resources</h2>
