--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h2> Kids activities </h2>
             <div class="gallery"> 
                 <img src="gallery/Arts and Crafts.jpg" alt="Arts and Crafts">
-                <img src= "img/arts-crafts.png" alt= "kids being artists">
+                <img src= "gallery/Kids art.jpg" alt= 'Arts and Crafts">
                 <img src="gallery/outdoor activities.jpg" alt="Outdoor activities">
                 <img src="gallery/story time.jpg" alt="Story time ">
 
