--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section> 
 
         <!--weekly schedule section-->
-        <section id= "schedule ">
+        <section id= "schedule">
             <h2>Weekly schedule</h2> 
             <table>
                 <tr>
@@ -71,7 +71,7 @@
             </div>
         </section>
         <!--Parent resource section-->
-        <section id ="Resources">
+        <section id ="resources">
             <h2>Parent Resources</h2>
             <p> check here for announcements and any further information for parents! </p>
             <ul>
